# low_cost_odometry

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: wheel_imu.yaml
launch/: lidar_only.launch  lidar_rgbd.launch  rgbd.launch  rosbag_play.launch  rosmsg_to_tum.launch  wheel_imu.launch  wheel_imu_lidar.launch  wheel_imu_lidar_rgbd.launch  wheel_imu_rgbd.launch
output/s1/: lidar_only.txt  lidar_rgbd.txt  monocular.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s2/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s3/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s4/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s5/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s6/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s7/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
output/s8/: lidar_only.txt  lidar_rgbd.txt  rgbd.txt  wheel_imu.txt  wheel_imu_lidar.txt  wheel_imu_lidar_rgbd.txt  wheel_imu_rgbd.txt  wheel_only.txt
rviz/: kf.rviz  map.rviz  rtabmap.rviz
scripts/: rosmsg_to_tum.py
