<?xml version="1.0"?>

<package format="2">
	<name>low_cost_odometry</name>
	<version>1.0.0</version>
	<description>
		SLAM 101 (Sensor-Based Spatial Intelligence) Project
	</description>
	<author email="dev.shin@snu.ac.kr">Shin</author>
	<maintainer email="dev.shin@snu.ac.kr">Shin</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<depend>rospy</depend>
	<depend>std_msgs</depend>
	<depend>tf2_ros</depend>

	<export>
	</export>
</package>
